--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
                             </li>
 
                             <li class="nav-item ml-2">
-                                <a class="nav-link" asp-controller="" asp-action=""><i
+                                <a class="nav-link" asp-controller="Users" asp-action="RegisterUser"><i
                                     class="fa-solid fa-align-justify"></i> Logon</a>
                             </li>
 
@@ -64,7 +64,7 @@
 
 
                         }
-                        @if (Context.Session.GetInt32("tipo") == 0)
+                        @if (Context.Session.GetInt32("type") == 0)
                         {
                             <li class="nav-item">
                                 <a class="nav-link" asp-controller="" asp-action="">Home
@@ -115,7 +115,7 @@
                             </li>
 
                         }
-                        @if (Context.Session.GetInt32("tipo") == 1)
+                        @if (Context.Session.GetInt32("type") == 1)
                         {
                             <li class="nav-item">
                                 <a class="nav-link" asp-controller="" asp-action="">Home
@@ -157,7 +157,7 @@
 
     </header>
 
-    <div class="container-fluid mt-5">
+    <div style="align-items: center;" class="container-fluid mt-5">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
