Adicionado listagem de usuários no nível de administrador

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -129,7 +129,7 @@
 
         </div>
 
-        <div class="container modal-container">
+        <div class="container-fluid modal-container">
 
             <!--cards modais-->
 
@@ -535,14 +535,14 @@
 
         <hr class="featurette-divider">
 
-        <div class="container container-mid-page">
+        <div class="container-fluid container-mid-page">
 
             <div class="row featurette">
 
                 <div class="col-md-12 col-lg-5 col-xl-5 col-sm-12 mt-3 mb-3 mid-colum">
 
                     <h2 class="featurette-heading">Transforme seu estilo ranqueada! <span class="text-muted">Confira
-                            dicas e estratégias com membros do time...</span></h2>
+                    dicas e estratégias com membros do time...</span></h2>
 
                     <p class="text-justify lead mt-5">
 
@@ -553,7 +553,7 @@
 
                     </p>
 
-                    <a asp-controller="Usuario" asp-action="CadUser" class="btn btn-primary but-index">Cadastre-se</a>
+                    <a asp-controller="Users" asp-action="RegisterUser" class="btn btn-primary but-index">Cadastre-se</a>
 
                 </div>
 
