--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -80,11 +80,11 @@
 
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 
-                                    <a class="dropdown-item" asp-controller="" asp-action=""><i
+                                    <a class="dropdown-item" asp-controller="Users" asp-action="RegisterUser"><i
                                     class="fa-solid fa-house"></i> Cadastrar Usuários</a>
                                     <a class="dropdown-item" asp-controller="" asp-action=""><i
                                     class="fa-solid fa-house"></i> Posts Cadastrados</a>
-                                    <a class="dropdown-item" asp-controller="" asp-action=""><i
+                                    <a class="dropdown-item" asp-controller="Users" asp-action="UserList"><i
                                     class="fa-solid fa-house"></i>Usuários Cadastrados</a>
 
                                 </div>
@@ -175,11 +175,8 @@
 
         <div class="container-fluid">
 
-            &copy; - <a href="https://github.com/Gianluca-Vialli/Killar2.0">WR KILLAR BROTHERHOOD</a> -
-            @DateTime.Now.ToString("dd/MM/yyyy") - <a href="https://github.com/Gianluca-Vialli"><i
-                    class="fa-brands fa-github"></i> Gianluca-Vialli</a> - <a
-                href="https://www.linkedin.com/in/gianluca-vialli-5a2a8a226/"><i class="fa-brands fa-linkedin"></i> My
-                LinkedIn</a>
+            <a href=""><i class="fa-regular fa-calendar-days"></i></a> - @DateTime.Now.ToString("dd/MM/yyyy") - <a href="https://github.com/Gianluca-Vialli"><i class="fa-brands fa-github"></i> Gianluca-Vialli</a> - <a href="https://www.linkedin.com/in/gianluca-vialli-5a2a8a226/"><i class="fa-brands fa-linkedin"></i> My
+            LinkedIn</a>
 
         </div>
 
