--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -15,7 +15,8 @@
 
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
-    <link rel="stylesheet" href="~/css/style.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/styleIndex.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/styleUserList.css" asp-append-version="true" />
     <link rel="stylesheet" href="/css/FontAwesome/all.min.css" asp-append-version="true" />
     <link rel="stylesheet" href="/css/FontAwesome/fontawesome.min.css" asp-append-version="true" />
 
@@ -114,7 +115,7 @@
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" asp-controller="Users" asp-action="Logout"><i class="fa-solid fa-door-open"></i> Sair</a>
+                                <a class="nav-link" asp-controller="Users" asp-action="Logout"><i class="fa-solid fa-door-open"></i> Logout</a>
                             </li>
 
                         }
@@ -150,7 +151,7 @@
 
                             <li class="nav-item">
                                 <a class="nav-link" asp-controller="Users" asp-action="Logout">
-                                <i class="fa-solid fa-door-open"></i> Sair</a>
+                                <i class="fa-solid fa-door-open"></i> Logout</a>
                             </li>
 
                         }
