Alterações no layout

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -129,7 +129,9 @@
 
         </div>
 
-        <div class="container-fluid modal-container">
+        <hr class="mt-5 mb-5">
+
+        <div class="container modal-container">
 
             <!--cards modais-->
 
@@ -155,7 +157,7 @@
                     <hr class="mb-4">
 
                     <a type="button" class="btn btn-light mt-4" data-toggle="modal"
-                        data-target="#exampleModalCenter">Leia mais &raquo;</a>
+                    data-target="#exampleModalCenter">Leia mais &raquo;</a>
 
                     <!--Modal-->
 
@@ -533,9 +535,9 @@
             </div><!-- div row-->
         </div>
 
-        <hr class="featurette-divider">
+        <hr class="mt-5 mb-5">
 
-        <div class="container-fluid container-mid-page">
+        <div class="container container-mid-page">
 
             <div class="row featurette">
 
@@ -607,7 +609,7 @@
 
     </div>
 
-    <hr class="featurette-divider">
+    <hr class="mt-5 mb-5">
 
     <div class="container-fluid container-end-page featurette last">
 
