--- a/Views/Users/UserDelete.cshtml
+++ b/Views/Users/UserDelete.cshtml
@@ -18,8 +18,8 @@
 
             <input type="hidden" asp-for="Id">
             
-            <input class="btn btn-sm btn-dark mt-3" name="decision" type="submit" value="Delete">
-            <input class="btn btn-sm btn-dark mt-3" name="decision" type="submit" value="Cancel">
+            <button class="btn btn-outline-primary btn-md mt-3" name="decision" type="submit" value="Delete"><i class="fa-solid fa-trash"></i> Excluir</button>
+            <button class="btn btn-outline-primary btn-md mt-3" name="decision" type="submit" value="Cancel"><i class="fa-solid fa-rotate-left"></i> Cancelar</button>
 
         </form>
     </div>
