--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -38,7 +38,7 @@
 
                 <p>Não tem uma conta? <a asp-controller="Users" asp-action=RegisterUser> Cadastre-se agora mesmo!</a></p>
 
-                <p class="mt-5 mb-3 text-muted">&copy; @DateTime.Now</p>
+                <!--<p class="mt-5 mb-3 text-muted">&copy; @DateTime.Now.ToString("dd/MM/yyyy HH:mm:ss")</p>-->
 
             </div>
 
