--- a/Views/Users/UserList.cshtml
+++ b/Views/Users/UserList.cshtml
@@ -19,7 +19,7 @@
                     <h2 class="mb-4">Lista de Usuários Cadastrados</h2>
 
                     <table
-                        class=" table table-responsive table-bordered table-hover table-striped table-light text-center">
+                        class=" table table-responsive table-bordered table-striped table-light text-center">
 
                         <thead class="thead-dark text-center">
 
@@ -53,8 +53,8 @@
                                     <td>@u.Elo</td>
                                     <td>@u.Tipo</td>
 
-                                    <td><a href="/Users/UserEdit?id=@u.Id">Editar</a></td>
-                                    <td><a href="/Users/UserDelete?id=@u.Id">Excluir</a></td>
+                                    <td><a href="/Users/UserEdit?id=@u.Id"><i class="fa-solid fa-user-pen"></i></a></td>
+                                    <td><a href="/Users/UserDelete?id=@u.Id"><i class="fa-solid fa-user-xmark"></i></a></td>
                                 </tr>
                             }
                         </tbody>
